@@ -1,4 +1,4 @@
-avg-pkg-build-time.1
-sbuild.1
-sbuild-createchroot.1
-sbuild-setup.7
+man/avg-pkg-build-time.1
+man/sbuild.1
+man/sbuild-createchroot.1
+man/sbuild-setup.7
