@@ -35,6 +35,8 @@ sbuild (0.57) unstable; urgency=low
   * example.sbuildrc: Add missing variable types and add
     $check_depends_algorithm.  [Jan-Marek Glogowski]
   * sbuild.1: Document --check-depends-algorithm [Jan-Marek Glogowski]
+  * Move manual pages to man/.
+  * debian/manpages: Move manual pages to man/.
 
  -- Roger Leigh <rleigh@debian.org>  Sun, 02 Dec 2007 15:03:04 +0000
 
